# Modern-OpenGL-3D

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  setup.txt
include/: EBO.h  ShaderProgram.h  Timer.h  VBO.h  Window.h
shaders/: default.frag  default.vert  textured.frag  textured.vert
src/: Camera.h  Debug.cpp  Debug.h  EBO.cpp  EBO.h  Engine.cpp  Engine.h  Global.cpp  Global.h  Includes.cpp  Includes.h  Input.cpp  Input.h  MainScene.cpp  MainScene.h  Mesh.cpp  Mesh.h  Scene.cpp  Scene.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  TextureContainer.cpp  TextureContainer.h  Timer.cpp  Timer.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  Vertex.cpp  Vertex.h  Window.cpp  Window.h  glad.h  main.cpp
src/engine/: Camera.cpp  Cube.cpp  Cube.h  Debug.cpp  Debug.h  EBO.h  Engine.cpp  Engine.h  Input.cpp  Input.h  Mesh.cpp  Mesh.h  ResourceManager.h  Scene.h  ShaderProgram.cpp  Texture.cpp  Texture.h  Timer.h  VAO.h  VBO.h  Vertex.h  Window.cpp  Window.h
src/engine/glad/: glad.c
